Label Usuario - Input Nome Usuario

--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Tela de Login</title>
   </head>
   <body>
-    <div class="mais-login">
+    <div class="main-login">
       <div class="left-login">
         <h1>
-          Efetue login<br />
-          ao lado
-        </h1>
+          Efetue login</h1>
       </div>
 
       <div class="right-login">
-        <div class="card-login"></div>
+
+        <div class="card-login">
+            <div class = "textfield">
+                <label for="usuario">Usuário</label>
+                <input type="text" name ="usuario" placeholder="Nome de usuário">
+            </div>
+        </div>
 
       </div>
 
