--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <label for="usuario">Usuário</label>
                 <input type="text" name ="usuario" placeholder="Nome de usuário">
             </div>
+            <div class = "textfield">
+              <label for="usuario">Senha</label>
+              <input type="password" name ="senha" placeholder="Digite sua senha">
+          </div>
         </div>
 
       </div>
