--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div class="right-login">
 
         <div class="card-login">
+          <h1>LOGIN</h1>
             <div class = "textfield">
                 <label for="usuario">Usuário</label>
                 <input type="text" name ="usuario" placeholder="Nome de usuário">
@@ -23,6 +24,8 @@
               <label for="usuario">Senha</label>
               <input type="password" name ="senha" placeholder="Digite sua senha">
           </div>
+
+          <button class="botao-login">Login</button>
         </div>
 
       </div>
