--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="main-login">
       <div class="left-login">
         <h1>
-          Efetue login</h1>
+          Tela de Login <br>
+        HTML & css</h1>
+
+ <img src="animate.svg" alt="animacao-left-login">
          
       </div>
 
