--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           Tela de Login <br>
         HTML & css</h1>
 
- <img src="animate.svg" alt="animacao-left-login">
+ <img src="animate.svg" class="left-login-image" alt="animacao-left-login">
          
       </div>
 
