--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Tela de Login</title>
   </head>
@@ -10,8 +10,7 @@
     <div class="main-login">
       <div class="left-login">
         <h1>
-          Tela de Login <br>
-        HTML & css</h1>
+          Tela de Login        HTML & CSS</h1>
 
  <img src="animate.svg" class="left-login-image" alt="animacao-left-login">
          
@@ -20,7 +19,7 @@
       <div class="right-login">
 
         <div class="card-login">
-          <h1>LOGIN</h1>
+          <h1>Acesse sua Conta</h1>
             <div class = "textfield">
                 <label for="usuario">Usuário</label>
                 <input type="text" name ="usuario" placeholder="Nome de usuário">
